# ChangeLog for media-gfx/graphviz
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphviz/ChangeLog,v 1.69 2005/11/09 21:55:54 grobian Exp $

  09 Nov 2005; Fabian Groffen <grobian@gentoo.org>
  +files/graphviz-2.6-macos.patch, graphviz-2.6.ebuild:
  Define 'environ' so linking actually succeeds on OSX (bug #111504)

  03 Nov 2005; Luca Barbato <lu_zero@gentoo.org> graphviz-1.16-r1.ebuild:
  Backport 2.6 postinst

  31 Oct 2005; Lina Pezzella <j4rg0n@gentoo.org>
  +files/graphviz-2.6-no-undefined.patch, graphviz-2.4.ebuild,
  graphviz-2.6.ebuild:
  Fix for undefined symbols on ppc-macos. Conditional on OS in Makefile rather
  than the ebuild. Keyworded testing ppc-macos.

  28 Oct 2005; Bryan Østergaard <kloeri@gentoo.org> graphviz-2.6.ebuild:
  Add ~alpha + ~ia64 keywords.

  28 Oct 2005; Simon Stelling <blubb@gentoo.org> graphviz-1.16-r1.ebuild:
  stable on amd64 wrt bug 108690

  26 Oct 2005; Lina Pezzella <j4rg0n@gentoo.org> graphviz-2.4.ebuild:
  Testing ppc-macos

  25 Oct 2005; Rene Nussbaumer <killerfox@gentoo.org> graphviz-2.6.ebuild:
  Unstable on hppa.

*graphviz-1.16-r1 (24 Oct 2005)

  24 Oct 2005; Luca Barbato <lu_zero@gentoo.org> +graphviz-1.16-r1.ebuild:
  revbump

  24 Oct 2005; Luca Barbato <lu_zero@gentoo.org>
  +files/graphviz-1.16-tempdir.patch, graphviz-1.16.ebuild:
  Fix for bug #108690

  24 Sep 2005; Mark Loeser <halcy0n@gentoo.org> graphviz-1.10.ebuild,
  graphviz-1.12.ebuild, graphviz-1.12-r1.ebuild, graphviz-1.16.ebuild,
  graphviz-2.2.ebuild, graphviz-2.2.1.ebuild, graphviz-2.2.1-r1.ebuild,
  graphviz-2.4.ebuild, graphviz-2.6.ebuild:
  Added sys-devel/gettext to DEPEND; bug #81395

*graphviz-2.6 (15 Sep 2005)

  15 Sep 2005; Steve Arnold <nerdboy@gentoo.org> +graphviz-2.6.ebuild:
  added latest version for doxygen and bug #105041, and added ~sparc back;
  modified user-submitted ebuild from Dick Marinus <dm@chello.nl> (thanks!)
