@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/graphviz
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphviz/ChangeLog,v 1.69 2005/11/09 21:55:54 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphviz/ChangeLog,v 1.70 2005/11/10 20:43:12 lu_zero Exp $
+
+  10 Nov 2005; Luca Barbato <lu_zero@gentoo.org>
+  files/graphviz-1.16-tempdir.patch:
+  Updated patch as requested in bug #108690
 
   09 Nov 2005; Fabian Groffen <grobian@gentoo.org>
   +files/graphviz-2.6-macos.patch, graphviz-2.6.ebuild:
